--- a/index.html
+++ b/index.html
@@ -16,34 +16,49 @@
     href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;1,200&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&display=swap"
     rel="stylesheet">
 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+  <script>
+    $(function () {
+      $("#datepicker").datepicker({
+        numberOfMonths: 3,
+        showButtonPanel: true
+      });
+    });
+  </script>
 
   <title>Work Day Planner</title>
 
 
   <style>
-    [class*="html"] {
-      background-color: rgb(209, 178, 143);
-    }
-
     [class*="body"] {
-      background-color: rgb(209, 178, 143);
+      background-color: rgb(201, 178, 143);
     }
 
     [class*="table"] {
       background-color: rgb(109, 129, 82);
     }
+
+    [class*="hourly-card"] {
+      background-color: rgb(201, 178, 143);
+    }
   </style>
 
-
-</head>
+  <link rel="stylesheet" href="./assets/css/custom.css" </head>
 
 <body class="body">
 
   <header class="jumbotron jumbotron-fluid custom-jumbotron">
     <div class=" container text-center bg-dark">
       <h1 class="display-3 fw-bold text-white bg-dark">Work Day Planner</h1>
-      <h2 class="display-6 fw-bold text-white bg-dark" id="time-display">Current Time & Date:</h2>
-      <p id="present" class="lead"></p>
+      <h2 class="current-time display-6 fw-bold text-white bg-dark">Current Time & Date: <br />
+        <p id="time-display" class="lead"></p>
+      </h2>
+      <br>
     </div>
   </header>
 
@@ -51,7 +66,7 @@
     <div class="row">
 
       <section class="container-responsive">
-        <div class="card hourly-card bg-transparent">
+        <div class="card hourly-card">
           <h3 class="card-header display-4 text-white bg-dark">Hourly Input</h3>
           <div class="card-box-body">
             <p class="card-box-text display-8 fw-bold bg-warning">
@@ -62,204 +77,125 @@
             </p>
           </div>
 
-          <div class="card-box-footer text-white bg-dark"></div>
+          <div class="card-body-date">
+            <h5>Date: <input class="text-dark" type="text" id="datepicker"></h5>
+          </div>
+
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">8:00</li>
+            <li class="list-group-item">9:00</li>
+            <li class="list-group-item">10:00</li>
+            <li class="list-group-item">11:00</li>
+            <li class="list-group-item">12:00</li>
+            <li class="list-group-item">13:00</li>
+            <li class="list-group-item">14:00</li>
+            <li class="list-group-item">15:00</li>
+            <li class="list-group-item">16:00</li>
+            <li class="list-group-item">17:00</li>
+          </ul>
+
+          <div class="card-box-footer text-white bg-dark">
+            <button class="btn text-center text-white bg-danger" data-bs-toggle="modal"
+              data-bs-target="#hourly-modal">Click to add info</button>
+          </div>
+
+          <br class="hourly-card">
+
+          <section class="table-responsive">
+            <div class="table table-striped table-hover mx-auto w-auto">
+              <table class="table table-bordered custom-table">
+                <thead>
+                  <tr class="text-center">
+                    <th class="display-time-info" scope="col">Time</th>
+                    <th class="display-title-info" scope="col">Title</th>
+                    <th class="display-description-info" scope="col">Description</th>
+                    <th class="display-importance-info" scope="col">Priority</th>
+                    <th class="display-importance-info p-3" scope="col"></th>
+                  </tr>
+                </thead>
+
+                <tbody class="display-table-body text-white bg-primary" id="display-table"></tbody>
+
+                <!-- <tfoot class="display-table-foot"></tfoot> -->
+              </table>
+            </div>
+          </section>
+
         </div>
       </section>
 
-      <section class="table-responsive">
-        <div class="table table-striped table-hover mx-auto w-auto">
-          <table class="table table-bordered custom-table text-dark">
-
-            <thead>
-              <tr class="text-center">
-                <th class="bg-transparent" scope="col">Date</th>
-                <th class="time-info" scope="col">Time</th>
-                <th class="time-info" scope="col">Title</th>
-                <th class="time-info" scope="col">Description</th>
-                <th class="time-info" scope="col">Importance</th>
-                <th class="bg-transparent" scope="col" >Actions</th>
-              </tr>
-            </thead>
-
-            <tbody id="hourly-display">
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>0600 - 0700</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>0700 - 0800</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>0800 - 0900</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>0900 - 1000</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1000 - 1100</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1100 - 1200</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1200 - 1300</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1300 - 1400</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1400 - 1500</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1500 - 1600</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1600 - 1700</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block">Edit</button>
-                </td>
-              </tr>
-
-              <tr class="text-white bg-primary fw-normal">
-                <td class="current-date" placeholder="current date"></td>
-                <td>1700 - 1800</td>
-                <td aria-placeholder="title input..."></td>
-                <td aria-placeholder="description input..."></td>
-                <td aria-placeholder="dropdown importance"></td>
-                <td>
-                  <button type="button" class="btn custom-btn btn-danger btn-sm btn-block" data-target="#hourly-modal">Edit</button>
-                </td>
-              </tr>
-
-            </tbody>
-          </table>
-        </div>
-      </section>
 
       <!-- Modal -->
-      <div class="modal fade-in" id="hourly-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content bg-transparent">
-            <span class="close">&times;</span>
-            <div class="modal-header">
-              <h2 class="modal-title display-7 text-center text-white bg-dark" id="modal-title">Hourly Instructions and
+      <div class="modal fade" id="hourly-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header text-white bg-dark">
+              <h2 class="modal-title display-7 text-center" id="modal-title-form">Hourly Instructions and
                 Description</h2>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Submit"></button>
             </div>
-            <div class="mobal-body">
-              <h5 class="display-8 fw-bold">Title of activity:</h5>
-              <input type="text" class="form-control text-dark bg-warning" id="modal-title-info" placeholder="Input...">
-              <label for="modal-desription-info" class="form-description-info fw-bold">Description:</label>
-              <input type="text" class="form-control text-dark bg-warning" id="modal-description-info"
-                placeholder="Input...">
-            </div>
-            <div class="modal-footer">
-              <button class="btn btn-warning fw-bold">Submit</button>
-            </div>
-          </div>
-        </div>
-      </div>
+            <form id="modal-form">
+              <div class="mobal-body modal-xl">
 
+                <div class="modal-form-group">
+                  <label for="modal-time-input">Time</label>
+                  <input type="text" id="modal-time-input" class="form-control"
+                    placeholder="Enter a time between 0800 thru 1700 using a 24hr clock..." required />
+                </div>
 
+                <div class="modal-form-group">
+                  <label for="modal-title-input">Title</label>
+                  <input type="text" id="modal-title-input" class="form-control"
+                    placeholder="Enter a title of event..." required />
+                </div>
 
-    </div>
+                <div class="modal-form-group">
+                  <label for="modal-description-input">Description</label>
+                  <input type="text" id="modal-description-input" class="form-control"
+                    placeholder="Enter details in specficity to event..." required />
+                </div>                
+
+                <div class="modal-form-group">
+                  <label for="modal-priority-input">Priority</label>
+                  <select class="form-control" id="modal-priority-input">
+                    <option selected disabled>Pick one...</option>
+                    <option value="Critical">Critical</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Low">Low</option>
+                    <option value="Can be moved to the right">Can be pushed</option>
+                    <option value="Miscellaneous">Miscellaneous</option>
+                  </select>
+                </div>
+                
+                <div class="modal-form-group">
+                  <label for="modal-status-input">Task Status</label>
+                  <select class="form-control" id="modal-status-input">
+                    <option selected disabled>Pick one...</option>
+                    <option class="text-white bg-success" value="Completed">Completed</option>
+                    <option class="text-white bg-danger" value="Not Completed">Not Completed</option>
+                    <option class="text-dark bg-warning" value="Time Remains">Time Remains</option>
+                    <option class="text-whtie bg-dark" value="On Hold">On Hold</option>                   
+                  </select>
+                </div>
+
+              </div>
+
+              <div class="modal-footer bg-dark">
+                <button id="submit-info" type="submit" class="btn custom-btn btn-danger">Submit</button>
+              </div>
+            </form>
   </main>
+  <br>
+  <br>
+  <br>
 
 
-  <script scr="./assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+  <script src="./assets/js/script.js"></script>
 
 </body>
 
