--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     }
   </style>
 
-  <link rel="stylesheet" href="./assets/css/custom.css" </head>
+  <link rel="stylesheet" href="./assets/css/custom.css" />
+
+</head>
 
 <body class="body">
 
@@ -81,17 +83,16 @@
             <h5>Date: <input class="text-dark" type="text" id="datepicker"></h5>
           </div>
 
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">8:00</li>
-            <li class="list-group-item">9:00</li>
-            <li class="list-group-item">10:00</li>
-            <li class="list-group-item">11:00</li>
-            <li class="list-group-item">12:00</li>
-            <li class="list-group-item">13:00</li>
-            <li class="list-group-item">14:00</li>
-            <li class="list-group-item">15:00</li>
-            <li class="list-group-item">16:00</li>
-            <li class="list-group-item">17:00</li>
+          <ul class="list-group list-group-flush" id="">
+            <li class="list-group-item" id="time-eight">0800 - 0900</li>
+            <li class="list-group-item" id="time-nine">0900 - 1000</li>
+            <li class="list-group-item" id="time-ten">1000 - 1100</li>
+            <li class="list-group-item" id="time-eleven">1100 - 1200</li>
+            <li class="list-group-item" id="time-twelve">1200 - 1300</li>
+            <li class="list-group-item" id="time-thirteen">1300 - 1400</li>
+            <li class="list-group-item" id="time-fourteen">1400 - 1500</li>
+            <li class="list-group-item" id="time-fifteen">1500 - 1600</li>
+            <li class="list-group-item" id="time-sixteen">1600 - 1700</li>
           </ul>
 
           <div class="card-box-footer text-white bg-dark">
@@ -101,25 +102,36 @@
 
           <br class="hourly-card">
 
-          <section class="table-responsive">
+          <!-- <section class="table-responsive">
             <div class="table table-striped table-hover mx-auto w-auto">
               <table class="table table-bordered custom-table">
                 <thead>
                   <tr class="text-center">
-                    <th class="display-time-info" scope="col">Time</th>
-                    <th class="display-title-info" scope="col">Title</th>
-                    <th class="display-description-info" scope="col">Description</th>
-                    <th class="display-importance-info" scope="col">Priority</th>
-                    <th class="display-importance-info p-3" scope="col"></th>
+                    <th class="table-info" scope="col">Time</th>
+                    <th class="table-info" scope="col">Title</th>
+                    <th class="table-info" scope="col">Description</th>
+                    <th class="table-info" scope="col">Priority</th>
+                    <th class="table-info p-3" scope="col">
+                      <div class="table-form-group">
+                        <label for="table-status-input">Task Status</label>
+                        <select class="form-control" id="table-status-input">
+                          <option selected disabled>Pick one...</option>
+                          <option class="text-white bg-success" value="Completed">Completed</option>
+                          <option class="text-white bg-danger" value="Not Completed">Not Completed</option>
+                          <option class="text-dark bg-warning" value="Time Remains">Time Remains</option>
+                          <option class="text-whtie bg-dark" value="On Hold">On Hold</option>
+                        </select>
+                      </div>
+                    </th>
+                    <th class="table-info" scope="col"></th>
                   </tr>
                 </thead>
 
-                <tbody class="display-table-body text-white bg-primary" id="display-table"></tbody>
+                <tbody class="table-body text-white bg-primary" id="display-table"></tbody>
 
-                <!-- <tfoot class="display-table-foot"></tfoot> -->
               </table>
             </div>
-          </section>
+          </section> -->
 
         </div>
       </section>
@@ -138,21 +150,31 @@
 
                 <div class="modal-form-group">
                   <label for="modal-time-input">Time</label>
-                  <input type="text" id="modal-time-input" class="form-control"
-                    placeholder="Enter a time between 0800 thru 1700 using a 24hr clock..." required />
+                  <select class="form-control" id="modal-time-input">
+                    <option selected disabled>Pick one...</option>
+                    <option class="text-white bg-primary" value="0800 - 0900">0800 - 0900</option>
+                    <option class="text-white bg-secondary" value="0900 - 1000">0900 - 1000</option>
+                    <option class="text-white bg-success" value="1000 - 1100">1000 - 1100</option>
+                    <option class="text-whtie bg-danger" value="1100 - 1200">1100 - 1200</option>
+                    <option class="text-dark bg-warning" value="1100 - 1200">1200 - 1300</option>
+                    <option class="text-dark bg-info" value="1100 - 1200">1300 - 1400</option>
+                    <option class="text-dark bg-light" value="1100 - 1200">1400 - 1500</option>
+                    <option class="text-whtie bg-dark" value="1100 - 1200">1500 - 1600</option>
+                    <option class="text-whtie bg-primary" value="1100 - 1200">1600 - 1700</option>
+                  </select>
                 </div>
 
                 <div class="modal-form-group">
                   <label for="modal-title-input">Title</label>
-                  <input type="text" id="modal-title-input" class="form-control"
-                    placeholder="Enter a title of event..." required />
+                  <input type="text" id="modal-title-input" class="form-control" placeholder="Enter a title of event..."
+                    required />
                 </div>
 
                 <div class="modal-form-group">
                   <label for="modal-description-input">Description</label>
                   <input type="text" id="modal-description-input" class="form-control"
                     placeholder="Enter details in specficity to event..." required />
-                </div>                
+                </div>
 
                 <div class="modal-form-group">
                   <label for="modal-priority-input">Priority</label>
@@ -165,16 +187,11 @@
                     <option value="Miscellaneous">Miscellaneous</option>
                   </select>
                 </div>
-                
+
                 <div class="modal-form-group">
                   <label for="modal-status-input">Task Status</label>
-                  <select class="form-control" id="modal-status-input">
-                    <option selected disabled>Pick one...</option>
-                    <option class="text-white bg-success" value="Completed">Completed</option>
-                    <option class="text-white bg-danger" value="Not Completed">Not Completed</option>
-                    <option class="text-dark bg-warning" value="Time Remains">Time Remains</option>
-                    <option class="text-whtie bg-dark" value="On Hold">On Hold</option>                   
-                  </select>
+                  <input type="text" id="modal-status-input" class="form-control"
+                    placeholder="Enter Completed, Not Completed, Time Remains, On Hold..." required />
                 </div>
 
               </div>
